# type-path

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs
tests/: tests.rs
tests/compile-fail/: no_root_prefix.rs  no_root_prefix.stderr  not_an_absolute_path.stderr  slice_instead_of_array.rs  slice_instead_of_array.stderr  unresolved_path.rs  unresolved_path.stderr  wrong_array_length.rs  wrong_array_length.stderr
